# Projekt-z-jpo

./: .gitignore  CMakeLists.txt  README.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ollamaclient.cpp  ollamaclient.h  requirements.txt  tst_main.cpp
